--- a/app/src/main/res/layout/activity_create_new_team.xml
+++ b/app/src/main/res/layout/activity_create_new_team.xml
@@ -6,26 +6,101 @@
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.CreateNewTeamActivity">
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/teamPhoto"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/field_photo3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/press_text_team"
+        android:layout_marginBottom="16dp"
+        />
+
+    <TextView
+        android:id="@+id/press_text_team"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:text="@string/press_text3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/teamPhoto"
+         />
+
     <EditText
         android:id="@+id/teamName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Team name"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/press_text_team"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"/>
 
-    <EditText
+    <TextView
+        android:id="@+id/team_country_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/team_country"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/teamName" />
+
+    <Spinner
         android:id="@+id/teamCountry"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Country"
-        app:layout_constraintTop_toBottomOf="@id/teamName"
+        app:layout_constraintTop_toBottomOf="@id/team_country_text"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+
         />
+
+    <TextView
+        android:id="@+id/level_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="8dp"
+        android:text="@string/level"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/teamCountry" />
+
+    <Spinner
+        android:id="@+id/level"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/level_text" />
     <Button
         android:id="@+id/saveTeamButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/colorPrimary"
         android:text="create team"/>
+
+    <ProgressBar
+        android:id="@+id/pr1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"/>
 
 
 </android.support.constraint.ConstraintLayout>
