--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -6,83 +6,206 @@
     android:layout_height="match_parent"
     tools:context="com.fields.curiumx.fields.TeamActivity">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/teamImage"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="16dp"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/basicInfoContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:paddingBottom="16dp"
+        android:elevation="1dp">
+
+    <FrameLayout
+        android:id="@+id/team_photo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:src="@drawable/field_photo3"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
+        android:elevation="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/createNewTeamButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Create new team"
-        app:layout_constraintBottom_toTopOf="@id/joinTeamButton"
-        android:visibility="gone"/>
 
-    <Button
-        android:id="@+id/joinTeamButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Join team"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"/>
+        <ImageView
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:src="@drawable/profile_round" />
+
+        <de.hdodenhof.circleimageview.CircleImageView
+            android:id="@+id/teamImage"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:elevation="6dp"
+            android:src="@drawable/field_photo3" />
+
+    </FrameLayout>
+
+
+        <TextView
+            android:id="@+id/teamName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:text="TeamName"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/team_photo"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/country_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_view"
+            android:elevation="2dp"
+            android:padding="5dp"
+
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/team_photo"
+            app:layout_constraintTop_toBottomOf="@id/teamName">
+
+            <ImageView
+                android:layout_width="21dp"
+                android:layout_height="20dp"
+                android:src="@drawable/location_icon" />
+
+            <TextView
+                android:id="@+id/teamCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:gravity="center_horizontal"
+                android:paddingEnd="4dp"
+                android:text="Team country"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/teamLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_view"
+            android:padding="5dp"
+            android:paddingEnd="7dp"
+            android:paddingStart="7dp"
+            android:text="team level"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/team_photo" />
 
     <TextView
-        android:id="@+id/createTeamText"
+        android:id="@+id/teamEventCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone"
-
-        android:layout_marginTop="8dp"
-        android:gravity="center_vertical"
-        android:text="You aren't in any team"
-        app:layout_constraintBottom_toTopOf="@+id/createNewTeamButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        />
-
-    <TextView
-        android:id="@+id/teamName12"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:background="@drawable/rounded_view"
+        app:layout_constraintStart_toEndOf="@id/teamLevel"
+        android:text="event count"
+        android:padding="5dp"
+        android:paddingEnd="7dp"
+        android:paddingStart="7dp"
+        android:textStyle="bold"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:text="TeamName"
-        android:textStyle="bold"
-        android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        app:layout_constraintStart_toEndOf="@id/teamImage"
-        app:layout_constraintTop_toTopOf="parent"
-        android:visibility="gone"/>
+
+
+        app:layout_constraintTop_toBottomOf="@id/team_photo"/>
+
 
     <TextView
-        android:id="@+id/teamName13"
+        android:id="@+id/teamPlayerCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:background="@drawable/rounded_view"
+        android:text="player count"
+        android:padding="5dp"
+        android:paddingEnd="7dp"
+        android:paddingStart="7dp"
+        android:textStyle="bold"
         android:layout_marginStart="8dp"
-        app:layout_constraintLeft_toRightOf="@id/teamImage"
-        app:layout_constraintTop_toBottomOf="@+id/teamName12"
+        android:layout_marginTop="16dp"
+
+
+        app:layout_constraintStart_toEndOf="@id/teamEventCount"
+        app:layout_constraintTop_toBottomOf="@id/team_photo"/>
+
+        <ImageView
+            android:id="@+id/dropdown1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_dropdown"
+            app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
+            app:layout_constraintEnd_toEndOf="@id/basicInfoContainer" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/drop2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        android:elevation="0.25dp"
+        app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
+        >
+
+        <TextView
+            android:id="@+id/homeFieldText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="home field"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/leader_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="leader"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/workstyle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="work style"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/events_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/events"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textStyle="bold"
-        android:text="teamCountry"
-        android:textSize="15dp"
-        android:visibility="gone"
-        />
-    <Button
-        android:id="@+id/leaveButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Leave"
-        android:visibility="gone"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/basicInfoContainer" />
+
+
 
     <ProgressBar
         android:id="@+id/progress_bar"
