--- a/app/src/main/res/layout/activity_new_event.xml
+++ b/app/src/main/res/layout/activity_new_event.xml
@@ -102,6 +102,18 @@
 
         />
 
+    <TextView
+        android:id="@+id/chosen_field_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/location_text"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        />
+
     <Button
         android:id="@+id/choose_field_button"
         style="?android:attr/borderlessButtonStyle"
@@ -111,8 +123,17 @@
         android:text="@string/choose_field"
         android:textColor="@color/colorPrimary"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/location_text"
+        app:layout_constraintTop_toBottomOf="@id/chosen_field_name"
 
         />
+
+    <Button
+        android:id="@+id/publish_button"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/publish"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:background="@color/colorPrimary"/>
 
 </android.support.constraint.ConstraintLayout>
