--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -31,7 +31,7 @@
         android:layout_height="match_parent"
 
         android:gravity="center"
-        android:text="No results found"
+        android:text="@string/no_results_found"
         />
 
     <com.fields.curiumx.fields.EmptyRecyclerView
