--- a/app/src/main/res/layout/activity_search_field_only.xml
+++ b/app/src/main/res/layout/activity_search_field_only.xml
@@ -8,8 +8,8 @@
 
     <SearchView
         android:id="@+id/search1"
-        android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="4dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="4dp"
@@ -17,7 +17,7 @@
         android:elevation="1dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/area_name_thing"
+        app:layout_constraintTop_toTopOf="parent"
         android:paddingBottom="6dp"
         android:paddingEnd="2dp"
         android:paddingStart="2dp"
@@ -27,8 +27,56 @@
         android:id="@+id/fieldRecycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/search1"
+        app:layout_constraintTop_toBottomOf="@+id/area_name_thing1"
         android:layout_marginTop="8dp"
         />
+
+    <TextView
+        android:id="@+id/textViews_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:text="@string/no_results_found"
+        />
+
+    <LinearLayout
+        android:id="@+id/area_name_thing1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="3dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/search1"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        >
+
+        <Button
+            android:id="@+id/field_by_name1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="1dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_view"
+            android:text="@string/field_name" />
+
+        <Button
+            android:id="@+id/field_by_area1"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
+            android:layout_marginTop="4dp"
+            android:layout_marginBottom="1dp"
+            android:background="@drawable/rounded_view"
+            android:text="@string/field_area" />
+
+
+    </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
