--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.fields.curiumx.fields.TeamActivity">
 
     <android.support.constraint.ConstraintLayout
@@ -216,12 +217,17 @@
         app:layout_constraintStart_toEndOf="@id/events_text"
         app:layout_constraintTop_toBottomOf="@id/basicInfoContainer" />
 
+
     <com.fields.curiumx.fields.EmptyRecyclerView
         android:id="@+id/eventRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/events_text"/>
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/events_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        android:scrollbars="vertical">
+
+    </com.fields.curiumx.fields.EmptyRecyclerView>
 
 
 
