--- a/app/src/main/res/layout/activity_detail_team.xml
+++ b/app/src/main/res/layout/activity_detail_team.xml
@@ -3,57 +3,251 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.fields.curiumx.fields.DetailTeamActivity">
+    android:layout_height="match_parent">
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/basicInfoContainer"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:paddingBottom="16dp"
+        android:elevation="1dp">
+
+        <FrameLayout
+            android:id="@+id/team_photo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:elevation="5dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/teamImage"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginTop="16dp"
-        android:src="@drawable/field_photo3"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:layout_width="75dp"
+                android:layout_height="75dp"
+                android:src="@drawable/profile_round" />
+
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/teamImage"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_gravity="center"
+                android:elevation="6dp"
+                android:src="@drawable/field_photo3" />
+
+        </FrameLayout>
+
+
+        <TextView
+            android:id="@+id/teamName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="16dp"
+            android:text="TeamName"
+            android:textAppearance="@android:style/TextAppearance.Material.Medium"
+            android:textStyle="bold"
+            app:layout_constraintStart_toEndOf="@id/team_photo"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <LinearLayout
+            android:id="@+id/country_map"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/rounded_view"
+            android:elevation="2dp"
+            android:padding="5dp"
+
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/team_photo"
+            app:layout_constraintTop_toBottomOf="@id/teamName">
+
+            <ImageView
+                android:layout_width="21dp"
+                android:layout_height="20dp"
+                android:src="@drawable/location_icon" />
+
+            <TextView
+                android:id="@+id/teamCountry"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:gravity="center_horizontal"
+                android:paddingEnd="4dp"
+                android:text="Team country"
+                android:textStyle="bold" />
+
+
+        </LinearLayout>
+
+
+        <TextView
+            android:id="@+id/teamLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/rounded_view"
+            android:padding="5dp"
+            android:paddingEnd="7dp"
+            android:paddingStart="7dp"
+            android:text="team level"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/team_photo" />
+
+        <TextView
+            android:id="@+id/teamEventCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_view"
+            app:layout_constraintStart_toEndOf="@id/teamLevel"
+            android:text="event count"
+            android:padding="5dp"
+            android:paddingEnd="7dp"
+            android:paddingStart="7dp"
+            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+
+
+            app:layout_constraintTop_toBottomOf="@id/team_photo"/>
+
+
+        <TextView
+            android:id="@+id/teamPlayerCount"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_view"
+            android:text="player count"
+            android:padding="5dp"
+            android:paddingEnd="7dp"
+            android:paddingStart="7dp"
+            android:textStyle="bold"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+
+
+            app:layout_constraintStart_toEndOf="@id/teamEventCount"
+            app:layout_constraintTop_toBottomOf="@id/team_photo"/>
+
+        <ImageView
+            android:id="@+id/dropdown1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_dropdown"
+            app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
+            app:layout_constraintEnd_toEndOf="@id/basicInfoContainer" />
+
+    </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/drop2"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="@color/colorPrimary"
+        android:orientation="vertical"
+        android:visibility="invisible"
+        android:elevation="0.25dp"
+        app:layout_constraintBottom_toBottomOf="@id/basicInfoContainer"
+        >
+
+        <TextView
+            android:id="@+id/homeFieldText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:text="home field"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/leader_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="leader"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+        <TextView
+            android:id="@+id/workstyle_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="4dp"
+            android:text="work style"
+            android:textStyle="bold"
+            android:visibility="gone" />
+
+
+
+    </LinearLayout>
 
     <TextView
-        android:id="@+id/teamName"
+        android:id="@+id/events_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="20dp"
-android:text="teset"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/events"
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
-        android:textSize="30sp"
         android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/add_event_image"
+        app:layout_constraintTop_toBottomOf="@id/basicInfoContainer" />
 
-        app:layout_constraintLeft_toRightOf="@id/teamImage"
-
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_gravity="center_vertical"
-        android:background="@color/DividerColor"
-        tools:layout_editor_absoluteY="104dp" />
-
-
-    <Button
+    <TextView
         android:id="@+id/join"
-        android:layout_width="75dp"
-        android:layout_height="39dp"
-android:visibility="gone"
-        app:layout_constraintTop_toBottomOf="@id/teamName"
-android:layout_marginStart="20dp"
-        android:layout_marginRight="208dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:background="@drawable/rounded_view"
         android:backgroundTint="@color/colorPrimary"
-        android:text="join"
-        app:layout_constraintLeft_toRightOf="@id/teamImage"
-        tools:layout_editor_absoluteY="53dp" />
+        android:elevation="3dp"
+        android:gravity="center"
+        android:padding="5dp"
+        android:text="@string/join_team"
+        android:textColor="@color/blacknot"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+    <com.fields.curiumx.fields.EmptyRecyclerView
+        android:id="@+id/eventRecycler"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/events_text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="8dp"
+        android:scrollbars="vertical">
+
+    </com.fields.curiumx.fields.EmptyRecyclerView>
 
 
 
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"/>
 
 </android.support.constraint.ConstraintLayout>
